--- a/app/theme/app.core.scss
+++ b/app/theme/app.core.scss
@@ -7,6 +7,8 @@
 // By default each design mode includes these shared imports.
 // App Shared Sass variables belong in app.variables.scss.
 
-@import "../pages/hello-ionic/hello-ionic";
+@import "../pages/contact-info/contact-info";
 
-@import "../pages/item-details/item-details";
+@import "../pages/contact-list/contact-list";
+
+@import "../pages/group/group";
