--- a/app/theme/app.md.scss
+++ b/app/theme/app.md.scss
@@ -29,3 +29,9 @@
 // App Material Design Only Sass
 // --------------------------------------------------
 // CSS that should only apply to the Material Design app
+.show-page {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+}
